:bug: search input focus hidden by header

--- a/gatsby-site/src/components/utils/filtered-list.module.scss
+++ b/gatsby-site/src/components/utils/filtered-list.module.scss
@@ -21,3 +21,11 @@
     margin-right: 15px;
   }
 }
+
+.searchInput {
+  ////// else it is hidden by header
+  z-index: 2; 
+  position: relative;
+  //////
+  width: auto; 
+}
